--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,12 @@
-<h1>Welcome to One Month Rails!</h1>
-<p>
-	You've found the home page for the 
-	<%= link_to "One Month Rails", "http://onemontrails.com" %>
-	application.
-</p>
-<p>
-	<%= link_to "Sign Up Now!", "#" %>
-</p>
-
-<div class="footer">
-	 <small>
-          <%= link_to "One Month Rails", "http://onemonthrails.com" %>
-          by <%= link_to "Tomas Finger", "http://tomasfinger.se" %>
-     <small>
+<div class="hero-unit">
+	<h1>Welcome to One Month Rails!</h1>
+	<p>
+		You've found the home page for the 
+		<%= link_to "One Month Rails", "http://onemontrails.com" %>
+		application.
+	</p>
+	<p>
+		<%= link_to "Sign Up Now!", "#", class: "btn btn-inverse btn-large" %>
+	</p>
 </div>
+
