--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,10 @@
 		<body>
 		<%= render 'layouts/header' %>
 
+    <div class="container">
 		<%= yield %>
+    <%= render 'layouts/footer' %>
+     </div>
 
-		<%= render 'layouts/footer' %>
-
-		</body>
+ 		</body>
 </html>
