--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,7 +1,7 @@
 
 
 
-$btnPrimaryBackground: green;
+$btnInverseBackground: darkgrey;
 $navbarBackgroundHighlight: white;
 $navbarBackground: white;
 
