--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,16 @@
-<div class="hero-unit">
-	<h1>Welcome to One Month Rails!</h1>
-	<p>
-		You've found the home page for the 
-		<%= link_to "One Month Rails", "http://onemontrails.com" %>
-		application.
-	</p>
-	<p>
-		<%= link_to "Sign Up Now!", "#", class: "btn btn-inverse btn-large" %>
-	</p>
-</div>
+  <% if user_signed_in? %>
+	<h1>You are logged in!</h1>
+<% else %>  
+	<div class="hero-unit">
+		<h1>Welcome to One Month Rails!</h1>
+		<p>
+			You've found the home page for the 
+			<%= link_to "One Month Rails", "http://onemontrails.com" %>
+			application.
+		</p>
+		<p>
+			<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-inverse btn-large" %>
+		</p>
+	</div>
+<% end %>
 
